--- a/.github/workflows/tt-metal-l2-nightly.yaml
+++ b/.github/workflows/tt-metal-l2-nightly.yaml
@@ -63,7 +63,7 @@ jobs:
         with:
           name: eager-dist-${{ matrix.os }}-any
       - name: ${{ matrix.test-group.name }} tests
-        timeout-minutes: ${{ fromJSON(inputs.timeout) || '120' }}
+        timeout-minutes: ${{ fromJSON(inputs.timeout) || 120 }}
         uses: ./.github/actions/docker-run
         with:
           docker_username: ${{ github.actor }}
