--- a/.github/workflows/docs-latest-public.yaml
+++ b/.github/workflows/docs-latest-public.yaml
@@ -88,7 +88,8 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: gh_pages_${{ inputs.version }}
-          path: gh_pages/${{ inputs.version }}
+          path: gh_pages/${{ inputs.version }}/
+          if-no-files-found: error
 
   deploy-docs:
     needs: build-docs
@@ -111,7 +112,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           branch: gh-pages
           target-folder: ${{ inputs.version }}
-          folder: /work/gh_pages/${{ inputs.version }}
+          folder: gh_pages/${{ inputs.version }}
           force: false
       - name: Delete artifact if deployment failed
         # When the deployment API call fails, the artifacts are not cleaned up correctly
