--- a/.github/workflows/docs-latest-public.yaml
+++ b/.github/workflows/docs-latest-public.yaml
@@ -102,6 +102,9 @@ jobs:
         timeout-minutes: 10
         with:
           name: gh_pages_${{ inputs.version }}
+      - name: LS
+        run: |
+          ls -all
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         id: deployment
