#18657: Download artifact to the specific path where we expect them

--- a/.github/workflows/docs-latest-public.yaml
+++ b/.github/workflows/docs-latest-public.yaml
@@ -102,9 +102,7 @@ jobs:
         timeout-minutes: 10
         with:
           name: gh_pages_${{ inputs.version }}
-      - name: LS
-        run: |
-          ls -all
+          path: gh_pages_${{ inputs.version }}
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         id: deployment
