--- a/.github/workflows/docs-latest-public.yaml
+++ b/.github/workflows/docs-latest-public.yaml
@@ -98,6 +98,8 @@ jobs:
       run:
         shell: bash
     steps:
+      - name: ⬇️ Checkout
+        uses: actions/checkout@v4
       - uses: actions/download-artifact@v4
         timeout-minutes: 10
         with:
