#18657: Re-add the if statement to not deploy docs from feature branches

--- a/.github/workflows/docs-latest-public.yaml
+++ b/.github/workflows/docs-latest-public.yaml
@@ -107,6 +107,7 @@ jobs:
           path: gh_pages/${{ inputs.version }}
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
+        if: ${{ github.ref == 'refs/heads/main' }}
         id: deployment
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
