--- a/tt_metal/detail/CMakeLists.txt
+++ b/tt_metal/detail/CMakeLists.txt
@@ -1,6 +1,4 @@
-set(DETAIL_SRC
-    ${CMAKE_CURRENT_SOURCE_DIR}/reports/memory_reporter.cpp
-)
+set(DETAIL_SRC ${CMAKE_CURRENT_SOURCE_DIR}/reports/memory_reporter.cpp)
 
 add_library(detail OBJECT ${DETAIL_SRC})
 target_link_libraries(
