--- a/.github/workflows/_produce-data.yaml
+++ b/.github/workflows/_produce-data.yaml
@@ -46,6 +46,7 @@ on:
       - "Custom test dispatch"
       - "PR Gate"
       - "Nightly tt-metal L2 tests"
+      - "Package and release"
     types:
       - completed
 
