--- a/.github/workflows/pipeline-select-galaxy.yaml
+++ b/.github/workflows/pipeline-select-galaxy.yaml
@@ -28,6 +28,10 @@ on:
         required: false
         type: boolean
         default: false
+      tg-quick:
+        required: false
+        type: boolean
+        default: false
       tg-unit:
         required: false
         type: boolean
@@ -77,6 +81,14 @@ jobs:
     secrets: inherit
     uses: ./.github/workflows/tgg-model-perf-tests-impl.yaml
     if: ${{ inputs.tgg-model-perf }}
+  tg-quick:
+    if: ${{ inputs.tg-quick }}
+    needs: build-artifact
+    uses: ./.github/workflows/tg-quick.yaml
+    with:
+      docker-image: ${{ needs.build-artifact.outputs.ci-build-docker-image }}
+      wheel-artifact-name: ${{ needs.build-artifact.outputs.wheel-artifact-name }}
+      build-artifact-name: ${{ needs.build-artifact.outputs.build-artifact-name }}
   tg-unit-tests:
     needs: build-artifact
     secrets: inherit
