--- a/.github/workflows/tg-quick.yaml
+++ b/.github/workflows/tg-quick.yaml
@@ -12,15 +12,12 @@ on:
       build-artifact-name:
         required: true
         type: string
-      platform:
-        required: true
-        type: string
 
 jobs:
   tg-quick:
     runs-on:
       - in-service
-      - ${{ inputs.platform }}
+      - config-tg
     container:
       image: ${{ inputs.docker-image || 'docker-image-unresolved!'}}
       env:
@@ -61,8 +58,9 @@ jobs:
       - name: Run quick tests
         timeout-minutes: 20
         run: |
-          FAKE_DEVICE=TG pytest models/demos/llama3_subdevices/tests/test_llama_model.py -k quick
-          FAKE_DEVICE=TG pytest models/demos/llama3_subdevices/demo/demo_decode.py -k quick
+          # TODO: Run the chosen tests here
+          # pytest models/demos/llama3_subdevices/tests/test_llama_model.py -k quick
+          # pytest models/demos/llama3_subdevices/demo/demo_decode.py -k quick
       - uses: ./.github/actions/slack-report
         if: ${{ failure() }}
         with:
