--- a/.github/workflows/blackhole-demo-tests-impl.yaml
+++ b/.github/workflows/blackhole-demo-tests-impl.yaml
@@ -10,16 +10,11 @@ jobs:
       matrix:
         test-group: [
           {
-            name: "BH_functionality",
-            arch: blackhole,
-            runs-on: ["cloud-virtual-machine", "BH", "in-service"],
-            cmd: echo addme
-          },
-          {
-            name: "BH_performance",
+            name: "whisper_performance",
             arch: blackhole,
             runs-on: ["BH", "pipeline-perf", "in-service"],
-            cmd: echo addme
+            cmd: pytest -n auto models/demos/whisper/demo/demo.py --input-path="models/demos/whisper/demo/dataset/conditional_generation" -k "conditional_generation",
+            owner_id: U05RWH3QUPM #Salar Hosseini
           }
         ]
     name: ${{ matrix.test-group.name }}
@@ -31,7 +26,7 @@ jobs:
     steps:
       - uses: tenstorrent/tt-metal/.github/actions/checkout-with-submodule-lfs@main
       - name: Enable Performance mode
-        if: ${{ matrix.test-group.name == 'BH_performance' }}
+        if: ${{ contains(matrix.test-group.name, 'performance') }}
         run: |
           sudo cpupower frequency-set -g performance
       - name: Set up dynamic env vars for build
@@ -45,7 +40,7 @@ jobs:
           source ${{ github.workspace }}/python_env/bin/activate
           cd $TT_METAL_HOME
           export PYTHONPATH=$TT_METAL_HOME
-          source ${{ github.workspace }}/tests/scripts/single_card/run_single_card_demo_tests.sh
+          # source ${{ github.workspace }}/tests/scripts/single_card/run_single_card_demo_tests.sh
           ${{ matrix.test-group.cmd }}
       - uses: tenstorrent/tt-metal/.github/actions/upload-artifact-with-job-uuid@main
         timeout-minutes: 10
@@ -55,11 +50,11 @@ jobs:
             generated/test_reports/
           prefix: "test_reports_"
       - name: Disable Performance mode
-        if: ${{ matrix.test-group.name == 'BH_performance' }}
+        if: ${{ contains(matrix.test-group.name, 'performance') }}
         run: |
           sudo cpupower frequency-set -g ondemand
       - uses: ./.github/actions/slack-report
         if: ${{ failure() }}
         with:
           slack_webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}
-          owner: U0883RN6CRE  #William Ly
+          owner: ${{ matrix.test-group.owner_id }}
