--- a/.github/workflows/t3000-fast-tests-impl.yaml
+++ b/.github/workflows/t3000-fast-tests-impl.yaml
@@ -81,7 +81,7 @@ jobs:
         run: |
           export GTEST_OUTPUT=xml:generated/test_reports/
           mkdir -p generated/test_reports
-          source ${{ github.workspace }}/tests/scripts/t3000/run_t3000_unit_tests.sh
+          source tests/scripts/t3000/run_t3000_unit_tests.sh
           ${{ matrix.test-group.cmd }}
       - uses: ./.github/actions/slack-report
         if: ${{ failure() }}
@@ -101,3 +101,14 @@ jobs:
         with:
           path: |
             generated/test_reports/
+
+      - name: Cleanup
+        if: always()
+        run: |
+          # We are forced to checkout the repo into a subdir of the host's workdir; this pollutes the host
+          # with root-owned files.  Be sure to clean up after ourselves in case we're on a non-ephemeral runner.
+          echo "pre rm"
+          ls -al /__w/tt-metal/tt-metal
+          rm -rf /__w/tt-metal/tt-metal/docker-job
+          echo "post rm"
+          ls -al /__w/tt-metal/tt-metal
