Shuffle things around

--- a/tt_metal/tools/CMakeLists.txt
+++ b/tt_metal/tools/CMakeLists.txt
@@ -1,4 +1,3 @@
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/profiler)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/watcher_dump)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/lightmetal_runner)
 
@@ -8,7 +7,7 @@ add_library(tools OBJECT ${TOOLS_SRC})
 target_link_libraries(
     tools
     PUBLIC
-        profiler
+        Metalium::Metal::Impl
         Metalium::Metal::LLRT
     PRIVATE
         TT::Metalium::HostDevCommon
